# Corellia

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  build-and-packaging.md  categories.md  cli-design-principles.md  commands.md  core-concepts.md  frameworks.md  getting-started.md  introduction.md  project-configuration.md  roadmap.md
src/corellia/: cli.py  config.py  constants.py  models.py
src/corellia/cli_utils/: __init__.py  borders.py  divider.py  list.py  output.py  style.py  table.py  text.py  title.py
src/corellia/commands/: __init__.py  add.py  build.py  create.py  info.py  init_build.py  remove.py  run.py  sync.py
src/corellia/frameworks/: __init__.py  presets.py
src/corellia/managers/: __init__.py  base.py  git.py  package.py  package_resolver.py  project.py  python_env.py  virtual_env.py
src/corellia/services/: category.py  django.py  scaffold.py
src/corellia/templates/: app_README.txt  deploy_README.txt  gitignore.txt  package_README.txt
