[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corellia"
version = "0.1.0"
description = "CLI framework/toolchain for Python projects with initial Django specialization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[project.scripts]
core = "corellia.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]